z-index fix

--- a/src/components/home/header/headerUp/HeaderUp.css
+++ b/src/components/home/header/headerUp/HeaderUp.css
@@ -72,7 +72,7 @@ button {
     transparent 100%
   );
   filter: blur(60px);
-  z-index: 1000000000;
+  z-index: 0;
 }
 
 .flexbox {
@@ -157,7 +157,7 @@ button {
     transparent 100%
   );
   filter: blur(60px);
-  z-index: 1000000000;
+  z-index: 0;
 }
 
 
